crates/snapshot-tests/tests/snapshots/parser__require_newlines__strings.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[Wanted]: expected newline, found an identifier at `0`
  ┌─ strings:2:5
  │
2 │ 0=""o=""m=""r=""00="0"q="""0"""e="""0"""
  │     ^ expected newline


error: expected newline, found an identifier at `0`
 --> strings:2:5
  |
2 | 0=""o=""m=""r=""00="0"q="""0"""e="""0"""
  |     ^ expected newline
Error {
    kind: "Wanted",
    message: "expected newline, found an identifier",
    span: 5..6,
    path: Some(
        "0",
    ),
}
